--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu K-Riko</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Monoton&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 </head>
+<style>
+    .orbitron {
+        font-family: 'Orbitron', sans-serif;
+    
+    }
+    .monoton {
+        font-family: 'Monoton', sans-serif;
+    }
+
+
+</style>
 <body>
-    <img src="./img/Menu celular.png" style="width:100% ;" alt="">
+    <!-- <img src="./img/Menu celular.png" style="width:100% ;" alt=""> -->
+    <h1 class="monoton text-2xl text-center">Menu K-Riko</h1>
+    <!--Completos-->
+    <div>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+    </div>
+    <!--<Empanadas -->
+    <div></div>
+    <!--Otros-->
+    <div></div>
+    <!--Bebestibles-->
 </body>
 </html>
