--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/img/svg/Empanada.svg" />
+  <link rel="icon" type="image/svg+xml" href="img/svg/Empanada.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Menu Digital</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,9 +12,9 @@
     rel="stylesheet">
 </head>
 
-<body class="p-2 min-h-screen bg-menu-base bg-[url('/img/bg-pattern.svg')] bg-center bg-blend-soft-light">
+<body class="p-2 min-h-screen bg-menu-base bg-[url('img/bg-pattern.svg')] bg-center bg-blend-soft-light">
   <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 
 </html>
